--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
@@ -79,7 +79,7 @@
                         @foreach (var options in ViewBag.Options)
                         {
                             r++;
-                            <div class="input-block-@r">
+                            <div class="input-block" id="block-@r">
                                 <h2>Options</h2>
                                 <div class="form-group">
                                     <label class="control-label">Options Name</label>
@@ -153,7 +153,7 @@
 
         function deleteOption(id) 
         {
-            let optionBlock = document.getElementsByClassName("input-block-" + id)[0];
+            let optionBlock = document.getElementById("block-" + id);
 
             optionBlock.remove();
         }
@@ -400,10 +400,8 @@
 
             function createBlock() 
             {
-                let countItem = @r+blockCounter;
-
                 const block = document.createElement('div');
-                block.classList.add(`input-block-${countItem}`);
+                block.classList.add(`input-block`);
                 block.id = `block-${blockCounter}`;
                 block.innerHTML = `<div>
                                                                                         <h1>Options</h1>
@@ -429,7 +427,7 @@
                                                                                     </div>
                                                                                             <hr/>
                                                                                               <br />
-                                                                                                      <button class="btn btn-danger" onclick="deleteOption(${countItem})" 	type="button">Löschen</button>
+                                                                                                              <button class="btn btn-danger" onclick="deleteOption(${blockCounter})" 	type="button">Löschen</button>
                                                                                               <hr />
                                                                                               <br />
                                                                                     `;
