--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
@@ -7,7 +7,7 @@
 }
 @if (User.IsInRole("admin"))
 {
-    <h1>Edit Aussenzylinder \ Rundzylinder</h1>
+    <h1>@ViewData["Title"]</h1>
     <hr />
     <div class="row">
         <div class="col-md-12">
@@ -25,13 +25,19 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Systembeschreibung</label>
-                    <textarea asp-for="DesctiptionsSysteam" required class="form-control" id="exampleFormControlTextarea1"></textarea>
+                    <textarea asp-for="DesctiptionsSysteam"  class="form-control" id="exampleFormControlTextarea1"></textarea>
                     <span asp-validation-for="DesctiptionsSysteam" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Lieferzeit" class="control-label"></label>
-                    <textarea asp-for="Lieferzeit" required class="form-control" id="exampleFormControlTextarea1"></textarea>
+                    <textarea asp-for="Lieferzeit"  class="form-control" id="exampleFormControlTextarea1"></textarea>
                     <span asp-validation-for="Lieferzeit" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="LieferzeitGrosse" class="control-label"></label>
+                    <textarea asp-for="LieferzeitGrosse"  class="form-control" id="exampleFormControlTextarea1"></textarea>
+                    <span asp-validation-for="LieferzeitGrosse" class="text-danger"></span>
                 </div>
 
                 <div id="productOptions">
@@ -55,9 +61,9 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label">Beschreibung</label>
-                                    <textarea name="Descriptions" id="discriptions" class="form-control"> 
+                                    <textarea name="Descriptions" id="exampleFormControlTextarea1" class="form-control"> 
                                         @options.Description
-                                                </textarea>
+                                       </textarea>
                                 </div>
 
                                 <h1>Value & Cost </h1>
@@ -80,6 +86,43 @@
                                     </div>
                                     <input type="hidden" id="counter" name="inputCounter" />
                                 </div>
+
+                                <br />
+                                <div>
+
+                                    <h3>Wählen Sie aus, auf was diese Optionen angewendet werden sollen.</h3>
+
+                                    <ul>
+                                        @if (@ViewBag.InformSelect[0] == @options.Name)
+                                        {
+                                            <ol> <input type="checkbox" checked onchange="doppelChange(event.target.checked,1)" /> Doppelzylinder </ol>
+                                            <input type="hidden" id="chekDV1" value="true" name="doppel" />
+                                        }
+                                        else
+                                        {
+                                            <ol> <input type="checkbox" onchange="doppelChange(event.target.checked,1)" /> Doppelzylinder </ol>
+                                            <input type="hidden" id="chekDV1" value="false" name="doppel" />
+                                        }
+                                       
+
+                                        <ol><input type="checkbox" onchange="HalbChange(1,event.target.checked)" /> Halbzylinder</ol>
+                                        <input type="hidden" id="chekHV1" value="false" name="Halb" />
+
+                                        <ol><input type="checkbox" onchange="KnayfChange(1,event.target.checked)" /> Knaufzylinder</ol>
+                                        <input type="hidden" id="chekKV1" value="false" name="Knayf" />
+
+                                        <ol><input type="checkbox" onchange="HebelChange(1,event.target.checked)" /> Hebelzylinder</ol>
+                                        <input type="hidden" id="chekHeV1" value="false" name="Hebel" />
+
+                                        <ol><input type="checkbox" onchange="VorhangChange(1,event.target.checked)" /> Vorhangschloss</ol>
+                                        <input type="hidden" id="chekVV1" value="false" name="Vorhang" />
+
+                                        <ol><input type="checkbox" onchange="AussenChange(1,event.target.checked)" /> Aussenzylinder</ol>
+                                        <input type="hidden" id="chekAV1" value="false" name="Aussen" />
+                                    </ul>
+
+                                </div>
+                                <br />
                             </div>
                         }
                     }
@@ -91,21 +134,7 @@
 
                 <input value="@Model.NameSysteam" type="hidden" name="AltName" class="form-control" />
                 <hr />
-                <br />
-                <div >
-
-                    <h3>Wählen Sie aus, auf was diese Optionen angewendet werden sollen.</h3>
-
-                    <ul>
-                        <ol> <input type="checkbox" name="doppel" /> Doppelzylinder </ol>
-                        <ol><input type="checkbox" name="Halb" /> Halbzylinder</ol>
-                        <ol><input type="checkbox" name="Knayf" /> Knaufzylinder</ol>
-                        <ol><input type="checkbox" name="Hebel" /> Hebelzylinder</ol>
-                        <ol><input type="checkbox" name="Vorhang" /> Vorhangschloss</ol>
-                        <ol><input type="checkbox" name="Aussen" /> Aussenzylinder</ol>
-                    </ul>
-
-                </div>
+               
                 <input type="submit" value="Save" class="btn btn-primary" />
             </form>
         </div>
@@ -149,6 +178,73 @@
         });
 
 
+        function doppelChange(value, id) 
+        {
+            let input = document.getElementById("chekDV" + id);
+
+            if (value == true) 
+            {
+                input.value = true;
+            }
+            else {
+                input.value = false;
+            }
+        }
+        function HalbChange(id, value) 
+        {
+            let input = document.getElementById("chekHV" + id);
+
+            if (value == true) {
+                input.value = true;
+            }
+            else {
+                input.value = false;
+            }
+        }
+        function KnayfChange(id, value) 
+        {
+            let input = document.getElementById("chekKV" + id);
+
+            if (value == true) {
+                input.value = true;
+            }
+            else {
+                input.value = false;
+            }
+        }
+        function HebelChange(id, value) 
+        {
+            let input = document.getElementById("chekHeV" + id);
+
+            if (value == true) {
+                input.value = true;
+            }
+            else {
+                input.value = false;
+            }
+        }
+        function VorhangChange(id, value) 
+        {
+            let input = document.getElementById("chekVV" + id);
+
+            if (value == true) {
+                input.value = true;
+            }
+            else {
+                input.value = false;
+            }
+        }
+        function AussenChange(id, value) 
+        {
+            let input = document.getElementById("chekAV" + id);
+
+            if (value == true) {
+                input.value = true;
+            }
+            else {
+                input.value = false;
+            }
+        }
 
 
 
@@ -227,15 +323,44 @@
                                                                                                         <h1>Value & Cost </h1>
                                                                                                         <div id="Aussen_Innen_ProfilDopel">
                                                                                                             <div id="valueNGF">
-                                                                                                                            <input type="text" class="form-control" placeholder="Wert" name="valueNGF" />
+                                                                                                                                    <input type="text" class="form-control" placeholder="Wert" name="value" />
 
                                                                                                             </div>
                                                                                                             <div id="costNGF">
-                                                                                                                 <input type="number" class="form-control" placeholder="Preis" step="0.01" name="costNGF" />
+                                                                                                                         <input type="number" class="form-control" placeholder="Preis" step="0.01" name="cost" />
                                                                                                             </div>
                                                                                                                <input type="hidden" id="counter" name="inputCounter" />
                                                                                                         </div>
-                                                                                                    </div>`;
+                                                                                                    </div>
+                                                                                                              <br />
+                                                                                                    <div>
+
+                                                                                                        <h3>Wählen Sie aus, auf was diese Optionen angewendet werden sollen.</h3>
+
+                                                                                                        <ul>
+                                                                                                                                   <ol> <input type="checkbox" onchange="doppelChange(event.target.checked,${blockCounter})"   /> Doppelzylinder </ol>
+                                                                                                                             <input type="hidden" id="chekDV${blockCounter}" value="false" name="doppel" />
+
+                                                                                                                                 <ol><input type="checkbox" onchange="HalbChange(${blockCounter},event.target.checked)" /> Halbzylinder</ol>
+                                                                                                                                     <input type="hidden" id="chekHV${blockCounter}" value="false" name="Halb" />
+
+                                                                                                                                 <ol><input type="checkbox" onchange="KnayfChange(${blockCounter},event.target.checked)" /> Knaufzylinder</ol>
+                                                                                                                                     <input type="hidden" id="chekKV${blockCounter}" value="false" name="Knayf" />
+
+                                                                                                                                <ol><input type="checkbox" onchange="HebelChange(${blockCounter},event.target.checked)" /> Hebelzylinder</ol>
+                                                                                                                                     <input type="hidden" id="chekHeV${blockCounter}" value="false" name="Hebel" />
+
+                                                                                                                                <ol><input type="checkbox" onchange="VorhangChange(${blockCounter}, event.target.checked)" /> Vorhangschloss</ol>
+                                                                                                                                     <input type="hidden" id="chekVV${blockCounter}" value="false" name="Vorhang" />
+
+                                                                                                                              <ol><input type="checkbox" onchange="AussenChange(${blockCounter},event.target.checked)" /> Aussenzylinder</ol>
+                                                                                                                                     <input type="hidden" id="chekAV${blockCounter}" value="false" name="Aussen" />
+                                                                                                        </ul>
+
+                                                                                                    </div>
+                                                                                                    <br/>
+
+                                                                                                    `;
 
                 blockCounter++;
 
