--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
@@ -4,6 +4,9 @@
     int count = -1;
     int f = -1;
     int r = -1;
+    int select = 0;
+
+
 }
 @if (User.IsInRole("admin"))
 {
@@ -45,8 +48,9 @@
                     {
                         @foreach (var options in ViewBag.Options)
                         {
+                          
                             r++;
-                            <div class="input-block">
+                            <div class="input-block" id="block-@r">
                                 <h2>Optionen</h2>
                                 <div class="form-group">
                                     <label class="control-label">Optionen Name</label>
@@ -93,37 +97,151 @@
                                     <h3>Wählen Sie aus, auf was diese Optionen angewendet werden sollen.</h3>
 
                                     <ul>
-                                        @if (@ViewBag.InformSelect[0] == @options.Name)
+
+                                        @if (@ViewBag.InformSelect.Count > @select)
                                         {
-                                            <ol> <input type="checkbox" checked onchange="doppelChange(event.target.checked,1)" /> Doppelzylinder </ol>
-                                            <input type="hidden" id="chekDV1" value="true" name="doppel" />
+                                            @if (@ViewBag.InformSelect[select] != null)
+                                            {
+                                                @if (@ViewBag.InformSelect[select] == @options.Name)
+                                                {
+                                                    <ol> <input type="checkbox" class="doplV" checked onchange="doppelChange(event.target.checked,@select)" /> Doppelzylinder </ol>
+                                                    <input type="hidden" id="chekDV-@select" value="true" name="doppel" />
+                                                }
+                                                else
+                                                {
+                                                    <ol> <input type="checkbox" class="doplV" onchange="doppelChange(event.target.checked,@select)" /> Doppelzylinder </ol>
+                                                    <input type="hidden" id="chekDV-@select" value="false" name="doppel" />
+                                                }
+                                            }
                                         }
                                         else
                                         {
-                                            <ol> <input type="checkbox" onchange="doppelChange(event.target.checked,1)" /> Doppelzylinder </ol>
-                                            <input type="hidden" id="chekDV1" value="false" name="doppel" />
+                                            <ol> <input type="checkbox" class="doplV" onchange="doppelChange(event.target.checked,@select)" /> Doppelzylinder </ol>
+                                            <input type="hidden" id="chekDV-@select" value="false" name="doppel" />
                                         }
-                                       
 
-                                        <ol><input type="checkbox" onchange="HalbChange(1,event.target.checked)" /> Halbzylinder</ol>
-                                        <input type="hidden" id="chekHV1" value="false" name="Halb" />
+                                        @if (@ViewBag.InformSelectHalb.Count > @select)
+                                        {
+                                            @if (@ViewBag.InformSelectHalb[select] != null)
+                                            {
+                                                @if (@ViewBag.InformSelectHalb[select] == @options.Name)
+                                                {
+                                                    <ol><input type="checkbox" checked class="HalbV" onchange="HalbChange(@select,event.target.checked)" /> Halbzylinder</ol>
+                                                    <input type="hidden" id="chekHV-@select" value="false" name="Halb" />
+                                                }
+                                                else
+                                                {
+                                                    <ol><input type="checkbox" class="HalbV" onchange="HalbChange(@select,event.target.checked)" /> Halbzylinder</ol>
+                                                    <input type="hidden" id="chekHV-@select" value="false" name="Halb" />
 
-                                        <ol><input type="checkbox" onchange="KnayfChange(1,event.target.checked)" /> Knaufzylinder</ol>
-                                        <input type="hidden" id="chekKV1" value="false" name="Knayf" />
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <ol><input type="checkbox" class="HalbV" onchange="HalbChange(@select,event.target.checked)" /> Halbzylinder</ol>
+                                            <input type="hidden" id="chekHV-@select" value="false" name="Halb" />
+                                        }
 
-                                        <ol><input type="checkbox" onchange="HebelChange(1,event.target.checked)" /> Hebelzylinder</ol>
-                                        <input type="hidden" id="chekHeV1" value="false" name="Hebel" />
+                                        @if (@ViewBag.InformSelectKnayf.Count > @select)
+                                        {
+                                            @if (@ViewBag.InformSelectKnayf[select] != null)
+                                            {
+                                                @if (@ViewBag.InformSelectKnayf[select] == @options.Name)
+                                                {
+                                                    <ol><input type="checkbox" checked class="KnayfV" onchange="KnayfChange(@select,event.target.checked)" /> Knaufzylinder</ol>
+                                                    <input type="hidden" id="chekKV-@select" value="false" name="Knayf" />
+                                                }
+                                                else
+                                                {
+                                                    <ol><input type="checkbox" class="KnayfV" onchange="KnayfChange(@select,event.target.checked)" /> Knaufzylinder</ol>
+                                                    <input type="hidden" id="chekKV-@select" value="false" name="Knayf" />
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <ol><input type="checkbox" class="KnayfV" onchange="KnayfChange(@select,event.target.checked)" /> Knaufzylinder</ol>
+                                            <input type="hidden" id="chekKV-@select" value="false" name="Knayf" />
+                                        }
 
-                                        <ol><input type="checkbox" onchange="VorhangChange(1,event.target.checked)" /> Vorhangschloss</ol>
-                                        <input type="hidden" id="chekVV1" value="false" name="Vorhang" />
+                                        @if (@ViewBag.InformSelectHebel.Count > @select)
+                                        {
+                                            @if (@ViewBag.InformSelectHebel[select] != null)
+                                            {
+                                                @if (@ViewBag.InformSelectHebel[select] == @options.Name)
+                                                {
+                                                    <ol><input type="checkbox" checked class="HebelV" onchange="HebelChange(@select,event.target.checked)" /> Hebelzylinder</ol>
+                                                    <input type="hidden" id="chekHeV-@select" value="false" name="Hebel" />
+                                                }
+                                                else
+                                                {
+                                                    <ol><input type="checkbox" class="HebelV" onchange="HebelChange(@select,event.target.checked)" /> Hebelzylinder</ol>
+                                                    <input type="hidden" id="chekHeV-@select" value="false" name="Hebel" />
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <ol><input type="checkbox" class="HebelV" onchange="HebelChange(@select,event.target.checked)" /> Hebelzylinder</ol>
+                                            <input type="hidden" id="chekHeV-@select" value="false" name="Hebel" />
+                                        }
 
-                                        <ol><input type="checkbox" onchange="AussenChange(1,event.target.checked)" /> Aussenzylinder</ol>
-                                        <input type="hidden" id="chekAV1" value="false" name="Aussen" />
+                                        @if (@ViewBag.Vorhan.Count > @select)
+                                        {
+                                            @if (@ViewBag.Vorhan[select] != null)
+                                            {
+                                                @if (@ViewBag.Vorhan[select] == @options.Name)
+                                                {
+                                                    <ol><input type="checkbox" checked class="VorhangV" onchange="VorhangChange(@select,event.target.checked)" /> Vorhangschloss</ol>
+                                                    <input type="hidden" id="chekVV-@select" value="false" name="Vorhang" />
+                                                }
+                                                else
+                                                {
+                                                    <ol><input type="checkbox" class="VorhangV" onchange="VorhangChange(@select,event.target.checked)" /> Vorhangschloss</ol>
+                                                    <input type="hidden" id="chekVV-@select" value="false" name="Vorhang" />
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <ol><input type="checkbox" class="VorhangV" onchange="VorhangChange(@select,event.target.checked)" /> Vorhangschloss</ol>
+                                            <input type="hidden" id="chekVV-@select" value="false" name="Vorhang" />
+                                        }
+
+                                        @if (@ViewBag.InformSelectAussen.Count > @select)
+                                        {
+                                            @if (@ViewBag.InformSelectAussen[select] != null)
+                                            {
+                                                @if (@ViewBag.InformSelectAussen[select] == @options.Name)
+                                                {
+                                                    <ol><input type="checkbox" class="AussenV" checked onchange="AussenChange(@select,event.target.checked)" /> Aussenzylinder</ol>
+                                                    <input type="hidden" id="chekAV-@select" value="false" name="Aussen" />
+                                                }
+                                                else
+                                                {
+                                                    <ol><input type="checkbox" class="AussenV" onchange="AussenChange(@select,event.target.checked)" /> Aussenzylinder</ol>
+                                                    <input type="hidden" id="chekAV-@select" value="false" name="Aussen" />
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <ol><input type="checkbox" class="AussenV" onchange="AussenChange(@select,event.target.checked)" /> Aussenzylinder</ol>
+                                            <input type="hidden" id="chekAV-@select" value="false" name="Aussen" />
+                                        } 
+
                                     </ul>
-
                                 </div>
                                 <br />
+                                <hr />
+                                <br />
+                                <button class="btn btn-danger" onclick="deleteOption(@r)" type="button">Löschen</button>
+                                <hr />
+                                <br />
                             </div>
+
+                            select++;
                         }
                     }
                 </div>
@@ -131,7 +249,7 @@
                 <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
                 <button id="addInputBtn" type="button" class="btn btn-success">+</button>
                 <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
-
+               
                 <input value="@Model.NameSysteam" type="hidden" name="AltName" class="form-control" />
                 <hr />
                
@@ -177,10 +295,50 @@
             content_css: 'css/content.css'
         });
 
+        function deleteOption(id) 
+        {
+            let optionBlock = document.getElementById("block-" + id);
+            optionBlock.remove();
+        }
+
+        document.addEventListener('DOMContentLoaded', function () 
+        {
+            let doppel = document.querySelectorAll(".doplV");
+            let halb = document.querySelectorAll(".HalbV");
+            let knayf = document.querySelectorAll(".KnayfV");
+            let hebel = document.querySelectorAll(".HebelV");
+            let Vorhang = document.querySelectorAll(".VorhangV");
+            let Aussen = document.querySelectorAll(".AussenV");
+
+            for (let i = 0; i < doppel.length; i++) 
+            {
+                doppelChange(doppel[i].checked, i);
+            }
+            for (let i = 0;i < halb.length; i++) 
+            {
+                HalbChange(i, halb[i].checked);
+            }
+            for (let i = 0;i < knayf.length ;i++) 
+            {
+                KnayfChange(i, knayf[i].checked);
+            }
+            for (let i = 0; i < hebel.length; i++) 
+            {
+                HebelChange(i, hebel[i].checked);
+            }
+            for (let i = 0; i < Vorhang.length; i++) 
+            {
+                VorhangChange(i, Vorhang[i].checked);
+            }
+            for (let i = 0; i < Aussen.length; i++) 
+            {
+                AussenChange(i, Aussen[i].checked);
+            } 
+        });
 
         function doppelChange(value, id) 
         {
-            let input = document.getElementById("chekDV" + id);
+            let input = document.getElementById("chekDV-" + id);
 
             if (value == true) 
             {
@@ -192,7 +350,7 @@
         }
         function HalbChange(id, value) 
         {
-            let input = document.getElementById("chekHV" + id);
+            let input = document.getElementById("chekHV-" + id);
 
             if (value == true) {
                 input.value = true;
@@ -203,7 +361,7 @@
         }
         function KnayfChange(id, value) 
         {
-            let input = document.getElementById("chekKV" + id);
+            let input = document.getElementById("chekKV-" + id);
 
             if (value == true) {
                 input.value = true;
@@ -214,7 +372,7 @@
         }
         function HebelChange(id, value) 
         {
-            let input = document.getElementById("chekHeV" + id);
+            let input = document.getElementById("chekHeV-" + id);
 
             if (value == true) {
                 input.value = true;
@@ -225,7 +383,7 @@
         }
         function VorhangChange(id, value) 
         {
-            let input = document.getElementById("chekVV" + id);
+            let input = document.getElementById("chekVV-" + id);
 
             if (value == true) {
                 input.value = true;
@@ -236,7 +394,7 @@
         }
         function AussenChange(id, value) 
         {
-            let input = document.getElementById("chekAV" + id);
+            let input = document.getElementById("chekAV-" + id);
 
             if (value == true) {
                 input.value = true;
@@ -308,7 +466,7 @@
             function createBlock() {
                 const block = document.createElement('div');
                 block.classList.add('input-block');
-                block.id = `block-${blockCounter}`;
+                block.id = `block-${blockCounter}`; 
                 block.innerHTML = `<div>
                                                                                                         <h1>Options</h1>
                                                                                                         <label>Name</label>
@@ -359,7 +517,11 @@
 
                                                                                                     </div>
                                                                                                     <br/>
-
+                                                                                                             <hr/>
+                                                                                                                  <br />
+                                                                                                                               <button class="btn btn-danger" onclick="deleteOption(${blockCounter})" 	type="button">Löschen</button>
+                                                                                                                  <hr />
+                                                                                                                  <br />
                                                                                                     `;
 
                 blockCounter++;
