--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/AllOrders.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/AllOrders.cshtml
@@ -11,7 +11,7 @@
     <div>
 
         <div>
-
+            @Html.ActionLink("Schipeed", "Schipeed", "Home", new { @class = "btn btn-primary" })
         </div>
         <div>
 
