--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -471,6 +471,7 @@
         border-radius: 20%;
         font-size: 8px;
         border: none;
+        background: transparent;
     }
 
     #TypeSelectTurType {
@@ -567,7 +568,7 @@
     .horizontal {
         display: flex;
         gap: 20px;
-        margin-left: 6px;
+        align-items: center;
     }
     #hilfeImg{
         display:none;
@@ -599,7 +600,7 @@
     #ItemTur {
         gap: 5px;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
     }
 
     .TexCountTur {
@@ -617,7 +618,7 @@
         transform: scale(0.5);
     }
 
-    #BlockTur-1 {
+    #BlockTur-0 {
         width: 235px;
         text-align: start;
     }
@@ -998,10 +999,11 @@
 
     #chekerTur > button {
         border-radius: 20%;
-       font-size:8px;
-       height:20px;
+        font-size: 8px;
+        height: 20px;
         width: 20px;
         border: none;
+        background: transparent;
     }
 
     #TypeSelectTurType 
@@ -1098,7 +1100,7 @@
     .horizontal {
         display: flex;
         gap: 20px;
-        margin-left: 6px;
+        align-items: center;
     }
 
     #TypeSelectTurItem {
@@ -1120,7 +1122,7 @@
     #ItemTur {
         gap: 5px;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
     }
 
     .TexCountTur {
@@ -1139,7 +1141,7 @@
         height: 20px;
     }
 
-    #BlockTur-1 {
+    #BlockTur-0 {
         width: 495px;
         text-align: start;
     }
@@ -1951,7 +1953,7 @@
     #ItemTur {
         gap: 5px;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
     }
 
     .TexCountTur {
@@ -2013,6 +2015,7 @@
             border-radius: 20%;
             width: 30px;
             border: none;
+            background:transparent;
         }
 
     #infoButten {
@@ -2073,7 +2076,7 @@
         text-align: start;
     }
 
-    #BlockTur-1 {
+    #BlockTur-0 {
         width: 570px;
         text-align: start;
     }
@@ -2097,9 +2100,9 @@
     }
 
     .horizontal {
+        align-items: center;
         display: flex;
         gap: 20px;
-        margin-left: 6px;
     }
 
     .horizontal1 {
@@ -3030,6 +3033,7 @@
     }
 
     #sclusselInfo2 {
+        justify-content: end;
         height: 100px;
         width: 800px;
         padding: 5px;
@@ -3037,7 +3041,7 @@
         color: #fff;
         align-items: center;
         display: grid;
-        grid-template-columns: 70px 250px 160px 170px 50px;
+        grid-template-columns: 70px 240px 170px 160px 120px;
         margin-top: -100px;
     }
 
@@ -3049,7 +3053,7 @@
     #ItemTur {
         gap: 5px;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
     }
 
 
@@ -3059,7 +3063,8 @@
         display: flex;
         grid-template-columns: 30px;
         background-color: #ededed;
-        align-items: self-end;
+        align-items: center;
+        justify-content: center;
     }
 
     .TexCountTurFinisher {
@@ -3110,6 +3115,7 @@
         #chekerTur > button {
             font-size: 18px;
             border: none;
+            background: transparent;
         }
 
     #infoButten {
@@ -3173,7 +3179,14 @@
     .custom-checkbox input:checked + .checkmark {
         background-color: #2196F3;
     }
+    .dragging {
+        opacity: 0.7;
+        border: 2px dashed #8CC4E7;
+    }
 
+    .over {
+        border: 2px dashed #000;
+    }
     .checkbox-label {
         margin-left: 10px;
         cursor: pointer;
@@ -3184,7 +3197,7 @@
         text-align: start;
     }
 
-    #BlockTur-1 {
+    #BlockTur-0 {
         width: 800px;
         text-align: start;
     }
@@ -3208,7 +3221,7 @@
     }
 
     .horizontal {
-        align-items: flex-end;
+        align-items: center;
         display: flex;
         gap: 10px;
     }
